// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en >GifApp/> Debe mostrar el componente 1`] = `
<Fragment>
  <h1>
    GifApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en >GifApp/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1>
    GifApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="gragon ball"
      key="gragon ball"
    />
  </ol>
</Fragment>
`;
